Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/NoClosedChar.ru
/? Error Léxico, no se cerró char, salida: char inválido

'a